Добавлен вывод лекарств пользователя на главную страницу

--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -17,5 +17,68 @@
     "Password is empty": "Введите пароль",
     "Short password": "Не менее 8 символов",
     "Unsafe password": "Как минимум одна заглавная буква и спец.символ"
+  },
+  "search": {
+    "hint": "Поиск"
+  },
+  "": {
+    "composition": "Состав и форма выпуска",
+    "compositionDf": "Состав",
+    "characteristics": "Характеристика",
+    "pharmaActions": "Фармакологические действия",
+    "actonOrg": "Действие на организм",
+    "componentsProperties": "Свойства компонентов",
+    "drugFormDescription": "Описание лекарственной формы",
+    "pharmaKinetic": "Фармакокинетика",
+    "pharmaDynamic": "Фармакодинамика",
+    "pharmaProperties": "Фармакологические (иммунобиологические) свойства",
+    "clinicalPharmacology": "Клиническая фармакология",
+    "direction": "Инструкция",
+    "indications": "Показания",
+    "recommendations": "Рекомендации",
+    "contraindications": "Противопоказания",
+    "pregnancyUse": "Применение при беременности и кормлении грудью\n",
+    "useMethodAndDoses": "Способ применения и дозы",
+    "instrForPac": "Инструкция для пациента",
+    "sideActions": "Побочные действия",
+    "interactions": "Взаимодействие",
+    "overdose": "Передозировка",
+    "precautions": "Меры предосторожности",
+    "specialGuidelines": "Особые указания",
+    "form": "Форма выпуска",
+    "aptekaCondition": "Условия отпуска из аптек",
+    "literature": "Литература",
+    "comment": "Комментарий",
+    "manufacturer": "Производитель",
+    "apply": "Назначение",
+    "complectation": "Комплектация",
+    "principle": "Принцип действия",
+    "mainTechChars": "Технические характеристики",
+    "observation": "Наблюдение за лечением",
+    "specification": "Спецификация",
+    "service": "Обслуживание",
+    "pharmGroups": "Фармгруппы",
+    "pharmActions": "Фармдействия",
+    "name": "Полное название",
+    "nameShort": "Cокращенное название",
+    "amount": "Общее количество элементов (таблеток, ампул) в упаковке",
+    "packing": "Полное описание товарной упаковки",
+    "packingShort": "Сокращенное описание товарной упаковки",
+    "barcode": "Штрихкод EAN",
+    "firm": "Название фирмы производителя/упаковщика",
+    "lifetimeText": "Срок годности.",
+    "lifetimeMonth": "Срок годности в месяцах.",
+    "storageConditions": "Условия хранения",
+    "storageConditionsShort": "Условия хранения в сокращенном виде",
+    "picname": "Название изображения",
+    "asNameRus": "Название действующего вещеcтва на русском языке",
+    "asNameEng": "Навзание действующего вещеcтва на английском языке",
+    "asNameLatGenitive": "Название действующего вещества на латинском языке в родительном падеже",
+    "asNameLat": "Название действующего вещества на латинском языке",
+    "tcfsDescId": "Идентификатор типовой клинико-фармакологической статьи о действующем веществе из раздела Описания library_as_description?desc_id={desc_id}",
+    "fdaCat": "Категория действия на плод FDA",
+    "asFormula": "Химическая формула",
+    "asFormulaHtml": "Химическая формула (HTML)",
+    "asterisk": "Входит ли действующее вещество в список МНН"
   }
 }
