Расширена локализация и адаптирована тема.

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -21,64 +21,69 @@
   "search": {
     "hint": "Search"
   },
-  "": {
-    "composition": "Composition and release form",
-    "compositionDf": "Composition",
-    "characteristics": "Characteristics",
-    "pharmaActions": "Pharmacological actions",
-    "actonOrg": "Action on the body",
-    "componentsProperties": "Properties of components",
-    "drugFormDescription": "Description of dosage form",
-    "pharmaKinetic": "Pharmacokinetics",
-    "pharmaDynamic": "Pharmacodynamics",
-    "pharmaProperties": "Pharmacological (immunobiological) properties",
-    "clinicalPharmacology": "Clinical pharmacology",
-    "direction": "Instructions",
-    "indications": "Indications",
-    "recommendations": "Recommendations",
-    "contraindications": "Contraindications",
-    "pregnancyUse": "Use during pregnancy and breastfeeding\n",
-    "useMethodAndDoses": "Method of application and doses",
-    "instrForPac": "Instructions for the patient",
-    "sideActions": "Side effects",
-    "interactions": "Interactions",
-    "overdose": "Overdose",
-    "precautions": "Precautions",
-    "specialGuidelines": "Special instructions",
-    "form": "Release form",
-    "aptekaCondition": "Conditions of release from pharmacies",
-    "literature": "Literature",
-    "comment": "Comment",
-    "manufacturer": "Manufacturer",
-    "apply": "Application",
-    "complectation": "Completeness",
-    "principle": "Principle of action",
-    "mainTechChars": "Technical characteristics",
-    "observation": "Treatment monitoring",
-    "specification": "Specification",
-    "service": "Service",
-    "pharmGroups": "Pharmacological groups",
-    "pharmActions": "Pharmacological actions",
-    "name": "Full name",
-    "nameShort": "Short name",
-    "amount": "Total number of items (tablets, ampoules) in the package",
-    "packing": "Complete description of the product packaging",
-    "packingShort": "Short description of the product packaging",
-    "barcode": "EAN barcode",
-    "firm": "Name of the manufacturer/packager",
-    "lifetimeText": "Shelf life.",
-    "lifetimeMonth": "Shelf life in months.",
-    "storageConditions": "Storage conditions",
-    "storageConditionsShort": "Storage conditions in abbreviated form",
-    "picname": "Image name",
-    "asNameRus": "Name of the active substance in Russian",
-    "asNameEng": "Name of the active substance in English",
-    "asNameLatGenitive": "Name of the active substance in Latin in the genitive case",
-    "asNameLat": "Name of the active substance in Latin",
-    "tcfsDescId": "Identifier of a standard clinical-pharmacological article on the active substance from the Description library_as_description?desc_id={desc_id}",
-    "fdaCat": "FDA category of action on the fetus",
-    "asFormula": "Chemical formula",
-    "asFormulaHtml": "Chemical formula (HTML)",
-    "asterisk": "Does the active substance belong to the INN list"
-  }
+  "profile": {
+    "user": "User"
+  },
+  "id": "ID",
+  "packaging": "Full description of product packaging",
+  "description": "Composition and release form",
+  "activeSubstance": "Active substance",
+  "composition": "Composition and release form",
+  "compositionDf": "Composition",
+  "characteristics": "Characteristics",
+  "pharmaActions": "Pharmacological actions",
+  "actonOrg": "Action on the body",
+  "componentsProperties": "Properties of components",
+  "drugFormDescription": "Description of dosage form",
+  "pharmaKinetic": "Pharmacokinetics",
+  "pharmaDynamic": "Pharmacodynamics",
+  "pharmaProperties": "Pharmacological (immunobiological) properties",
+  "clinicalPharmacology": "Clinical pharmacology",
+  "direction": "Instructions",
+  "indications": "Indications",
+  "recommendations": "Recommendations",
+  "contraindications": "Contraindications",
+  "pregnancyUse": "Use during pregnancy and breastfeeding\n",
+  "useMethodAndDoses": "Method of application and doses",
+  "instrForPac": "Instructions for the patient",
+  "sideActions": "Side effects",
+  "interactions": "Interactions",
+  "overdose": "Overdose",
+  "precautions": "Precautions",
+  "specialGuidelines": "Special instructions",
+  "form": "Release form",
+  "aptekaCondition": "Conditions of release from pharmacies",
+  "literature": "Literature",
+  "comment": "Comment",
+  "manufacturer": "Manufacturer",
+  "apply": "Application",
+  "complectation": "Completeness",
+  "principle": "Principle of action",
+  "mainTechChars": "Technical characteristics",
+  "observation": "Treatment monitoring",
+  "specification": "Specification",
+  "service": "Service",
+  "pharmGroups": "Pharmacological groups",
+  "pharmActions": "Pharmacological actions",
+  "name": "Full name",
+  "nameShort": "Short name",
+  "amount": "Total number of items (tablets, ampoules) in the package",
+  "packing": "Complete description of the product packaging",
+  "packingShort": "Short description of the product packaging",
+  "barcode": "EAN barcode",
+  "firm": "Name of the manufacturer/packager",
+  "lifetimeText": "Shelf life.",
+  "lifetimeMonth": "Shelf life in months.",
+  "storageConditions": "Storage conditions",
+  "storageConditionsShort": "Storage conditions in abbreviated form",
+  "picname": "Image name",
+  "asNameRus": "Name of the active substance in Russian",
+  "asNameEng": "Name of the active substance in English",
+  "asNameLatGenitive": "Name of the active substance in Latin in the genitive case",
+  "asNameLat": "Name of the active substance in Latin",
+  "tcfsDescId": "Identifier of a standard clinical-pharmacological article on the active substance from the Description library_as_description?desc_id={desc_id}",
+  "fdaCat": "FDA category of action on the fetus",
+  "asFormula": "Chemical formula",
+  "asFormulaHtml": "Chemical formula (HTML)",
+  "asterisk": "Does the active substance belong to the INN list"
 }
